Add meta tags and https URL for social sharing

--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Glastle - The Queue Game</title>
-  </head>
-  <body class="bg-slate-800 overflow-hidden">
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="Glastle - The Glastonbury ticket queue game" />
+  <meta property="og:description"
+    content="Can you survive the Glastonbury ticket queue? Refresh at the right time, collect power-ups, and avoid bot detection!" />
+  <meta property="og:image" content="https://glastle.surge.sh/og-image.png" />
+  <meta property="og:url" content="https://glastle.surge.sh" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Glastle - The Glastonbury ticket queue game" />
+  <meta name="twitter:description"
+    content="Can you survive the Glastonbury ticket queue? Refresh at the right time, collect power-ups, and avoid bot detection!" />
+  <meta name="twitter:image" content="https://glastle.surge.sh/og-image.png" />
+
+  <title>Glastle - The Queue Game</title>
+</head>
+
+<body class="bg-slate-800 overflow-hidden">
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
